--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app">
+    package="com.example.cov">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
-        <activity android:name=".MainActivityLogout"></activity>
-        <activity android:name=".MainActivityLogin" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.cov.LoginActivity"></activity>
+        <activity android:name="com.example.cov.MainActivity" />
+        <activity android:name="com.example.cov.MainActivityLogout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
