--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App"
-        android:name="androidx.multidex.MultiDexApplication" >
+        android:theme="@style/Theme.App">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDNysXu_ZDqzfaVXpitFOlPvqKulQ3cUws" />
 
-        <activity android:name="com.example.cov.MainActivity">
+        <activity android:name="com.example.cov.EditProfile" />
+        <activity android:name="com.example.cov.MainActivity" />
+        <activity android:name="com.example.cov.MainActivityLogout" />
+        <activity android:name="com.example.cov.Navigation"/>
+        <activity android:name="com.example.cov.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
