--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cov">
 
 
@@ -23,7 +22,7 @@
         <activity android:name="com.example.cov.EditProfile" />
         <activity android:name="com.example.cov.MainActivity" />
         <activity android:name="com.example.cov.MainActivityLogout" />
-        <activity android:name="com.example.cov.Navigation"/>
+        <activity android:name="com.example.cov.RequestActivity" />
         <activity android:name="com.example.cov.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
