--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDNysXu_ZDqzfaVXpitFOlPvqKulQ3cUws" />
 
-        <activity android:name="com.example.cov.EditProfile" />
+        <activity android:name="com.example.cov.ProfileActivity" />
         <activity android:name="com.example.cov.RequestActivity" />
         <activity android:name="com.example.cov.MainActivity" />
-        <activity android:name="com.example.cov.MainActivityLogout" />
+        <activity android:name="com.example.cov.SignUpActivity" />
         <activity android:name="com.example.cov.NotificationActivity" />
         <activity android:name="com.example.cov.LoginActivity">
             <intent-filter>
